Creating url fabiotavarespr.dev

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://fabiotavarespr.github.io/"
+baseURL = "https://fabiotavarespr.dev/"
 title = "@fabiotavarespr"
 theme = "soho"
 languageCode = "pt-BR"
