--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://fabiotavarespr.dev/"
-title = "@fabiotavarespr"
+title = "Blog"
 theme = "soho"
 languageCode = "pt-BR"
 enableInlineShortcodes = true
@@ -8,8 +8,8 @@ summarylength = 10
 enableEmoji = true
 
 [params]
-author = "Fabio Tavares Pereira Rego"
-description = "DevOps"
+author = "@fabiotavarespr"
+description = "Software Engineer"
 
 ## Set one of:
 # gravatar = "soho@example.com"
